--- a/templates/categories.html
+++ b/templates/categories.html
@@ -6,7 +6,7 @@
 {% include 'includes/meta.html' %}
 {% endblock head %}
 
-{% block title %}Дом Баня - Наши проекты{% endblock %}
+{% block title %}{{ category_title }}{% endblock %}
 
 {% block content %}
 
