--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,8 @@
 {% block title %}«Дом Баня» — Дома и бани из клееного бруса в Москве и области{% endblock %}
 
 {% block head %}
-  <meta name="description" content="ДомБаня - Дома и бани из клееного бруса. Мы сторим дома из клееного бруса для постояного проживания
-и делаем это качествено.">
+  <meta name="description" content="Компания «Дом Баня» — Мы строим дома и бани из клееного бруса и делаем это качественно.">
+  <meta property="og:description" content="Компания «Дом Баня» — Мы строим дома и бани из клееного бруса и делаем это качественно.">
   <meta property="og:url" content="{{ request.build_absolute_uri }}">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Дом из клееного бруса">
