--- a/templates/includes/list_houses.html
+++ b/templates/includes/list_houses.html
@@ -109,3 +109,47 @@
     </article>
   </section>
 {% endif %}
+
+{% if saunas_list %}
+  <p>Компания «Дом Баня» специализируется на строительстве бань из клееного бруса. Ответственное отношение к поставленной задаче, соблюдение оговоренных сроков, качество — это основа нашей работы. Нами реализованы десятки проектов бань и домов-бань.
+  Выбирая строительного подрядчика, важно учитывать уровень квалификации специалистов, их опыт работы с клееным брусом и наличие специального оборудования. Для неопытного человека это будет непростой задачей. Мы предлагаем каждому потенциальному заказчику посетить наш офис, пообщаться с нашими специалистами, а также лично оценить процесс строительства на объектах.</p>
+  <h3>Почему мы?</h3>
+  <ul>
+    <li>	Все работы выполняются в строгом соответствии с действующими СНиП, что отличает нас от низкоквалифицированных бригад.
+    <li>	При проектировании бани из клееного бруса мы предлагаем заказчику технические решения, которые помогут избежать новых трат в будущем. Например, лестницу на второй этаж лучше выбрать на стадии проектирования, чтобы заранее уменьшить или увеличить пространство для ее размещения. Также, выбирать места для розеток и выключателей нужно после расстановки мебели, так как кабельные каналы для проводки сверяться на этапе возведения бруса и дальнейший перенос практически невозможен.
+    <li>	Консультируем заказчика при покупке отделочных материалов, поможем выбрать поставщика.
+    <li>	Поможем с оформлением документов для подключения газа.
+    <li>	Мы строим качественно, контролируем все этапы производства.
+
+{% elif houses_list %}
+
+  <p>Компания «Дом Баня»— ваш надежный партнер в строительстве домов из клееного бруса. Ответственное отношение к поставленной задаче, соблюдение оговоренных сроков, качество — это основа нашей работы. Нами реализованы десятки проектов домов и бань.
+  Выбирая строительного подрядчика, важно учитывать уровень квалификации специалистов, их опыт работы с клееным брусом и наличие специального оборудования. Для неопытного человека это будет непростой задачей. Мы предлагаем каждому потенциальному заказчику посетить наш офис, пообщаться с нашими специалистами, а также лично оценить процесс строительства на объектах.
+  </p>
+  <h3>Почему мы?</h3>
+  <ul>
+    <li>	Все работы выполняются в строгом соответствии с действующими СНиП, что отличает нас от низкоквалифицированных бригад.
+    <li> При проектировании дома из клееного бруса, предлагаем заказчику технические. решения, которые помогут избежать новых трат в будущем.
+          Например, лестницу на второй этаж лучше выбрать на стадии проектирования, чтобы заранее уменьшить или увеличить пространство для ее размещения.
+          Также, выбирать места для розеток и выключателей нужно после расстановки мебели и кухонного оборудования, так как кабельные каналы для проводки сверяться на этапе возведения бруса и дальнейший перенос практически невозможен.  Еще пример: в зависимости от освещённости дома предложим выбрать стеклопакет с энергосбережением или с функцией отражения инфракрасного излучения — это даст возможность использовать кондиционирование воздуха на минимальном уровне или обойтись без него.
+{% endif %}
+{% if saunas_list or houses_list %}
+    <li>	Консультируем заказчика при покупке отделочных материалов, поможем выбрать поставщика.
+    <li>	Поможем с оформлением документов для подключения газа.
+    <li>	Мы строим качественно, контролируем все этапы производства.
+  </ul>
+  <p>Выбрав нас в качестве подрядчика, вы гарантированно получите результат превыше ожиданий.</p>
+  <h3>Чем клееный брус лучше обычного?</h3>
+  <p>Обычный брус вне зависимости от сушки подвержен деформациям и подвижности. Клееный брус изготавливают путём склеивания сухой остроганной доски между собой, что увеличивает жесткость, минимизирует усадку, создаёт стабильную геометрию. Со временем клееный брус не растрескивается, а его поверхность очень ровная и не требует отделки и дополнительной обработки. На протяжении всего эксплуатационного периода уровень влажности бруса поддерживается на оптимальном уровне, не создаются благоприятные условия для размножения бактерий и грибка.</p>
+
+<h2 style="text-align: center">Преимущества клееного бруса</h2>
+<p style="text-align: center">Приведем самые основные, на наш взгляд.</p>
+<ul>
+  <li><h3>Готовый красивый фасад</h3>
+  <p>После завершения основных строительных работ не требуется отделка фасада или устранение незначительных дефектов в виде трещин</p>
+  <li><h3>Теплые и гидроизолированные стены</h3>
+  <p>После завершения основных строительных работ не требуется утепление и гидроизоляция стен.</p>
+  <li><h3>Сниженные расходы и себестоимость</h3>
+  <p>Из первых пунктов следует существенное снижение расходов на строительство и ощутимое снижение себестоимости дома.</p>
+</ul>
+{% endif %}
