fix: list_houses layout

--- a/templates/includes/list_houses.html
+++ b/templates/includes/list_houses.html
@@ -112,49 +112,52 @@
 
 <section class="grid">
   <article class="grid__article">
-    {% if saunas_list %}
-      <p class="text text--sm">Компания «Дом Баня» специализируется на строительстве бань из клееного бруса. Ответственное отношение к поставленной задаче, соблюдение оговоренных сроков, качество — это основа нашей работы. Нами реализованы десятки проектов бань и домов-бань.
-      Выбирая строительного подрядчика, важно учитывать уровень квалификации специалистов, их опыт работы с клееным брусом и наличие специального оборудования. Для неопытного человека это будет непростой задачей. Мы предлагаем каждому потенциальному заказчику посетить наш офис, пообщаться с нашими специалистами, а также лично оценить процесс строительства на объектах.</p>
-      <h3 class="heading heading--h3 heading--left">Почему мы?</h3>
-      <ul class="text text--left list list--paddingLeft-small">
-        <li>Все работы выполняются в строгом соответствии с действующими СНиП, что отличает нас от низкоквалифицированных бригад.</li>
-        <li>При проектировании бани из клееного бруса мы предлагаем заказчику технические решения, которые помогут избежать новых трат в будущем. Например, лестницу на второй этаж лучше выбрать на стадии проектирования, чтобы заранее уменьшить или увеличить пространство для ее размещения. Также, выбирать места для розеток и выключателей нужно после расстановки мебели, так как кабельные каналы для проводки сверяться на этапе возведения бруса и дальнейший перенос практически невозможен.</li>
-        <li>Консультируем заказчика при покупке отделочных материалов, поможем выбрать поставщика.</li>
-        <li>Поможем с оформлением документов для подключения газа.</li>
-        <li>Мы строим качественно, контролируем все этапы производства.</li>
+    <div class="grid__element grid__element--wide">
+      
+      {% if saunas_list %}
+        <p class="text text--sm">Компания «Дом Баня» специализируется на строительстве бань из клееного бруса. Ответственное отношение к поставленной задаче, соблюдение оговоренных сроков, качество — это основа нашей работы. Нами реализованы десятки проектов бань и домов-бань.
+        Выбирая строительного подрядчика, важно учитывать уровень квалификации специалистов, их опыт работы с клееным брусом и наличие специального оборудования. Для неопытного человека это будет непростой задачей. Мы предлагаем каждому потенциальному заказчику посетить наш офис, пообщаться с нашими специалистами, а также лично оценить процесс строительства на объектах.</p>
+        <h3 class="heading heading--h3 heading--left">Почему мы?</h3>
+        <ul class="text text--left list list--paddingLeft-small">
+          <li>Все работы выполняются в строгом соответствии с действующими СНиП, что отличает нас от низкоквалифицированных бригад.</li>
+          <li>При проектировании бани из клееного бруса мы предлагаем заказчику технические решения, которые помогут избежать новых трат в будущем. Например, лестницу на второй этаж лучше выбрать на стадии проектирования, чтобы заранее уменьшить или увеличить пространство для ее размещения. Также, выбирать места для розеток и выключателей нужно после расстановки мебели, так как кабельные каналы для проводки сверяться на этапе возведения бруса и дальнейший перенос практически невозможен.</li>
+          <li>Консультируем заказчика при покупке отделочных материалов, поможем выбрать поставщика.</li>
+          <li>Поможем с оформлением документов для подключения газа.</li>
+          <li>Мы строим качественно, контролируем все этапы производства.</li>
 
-    {% elif houses_list %}
+      {% elif houses_list %}
 
-      <p class="text text--sm">Компания «Дом Баня» — ваш надежный партнер в строительстве домов из клееного бруса. Ответственное отношение к поставленной задаче, соблюдение оговоренных сроков, качество — это основа нашей работы. Нами реализованы десятки проектов домов и бань.
-      Выбирая строительного подрядчика, важно учитывать уровень квалификации специалистов, их опыт работы с клееным брусом и наличие специального оборудования. Для неопытного человека это будет непростой задачей. Мы предлагаем каждому потенциальному заказчику посетить наш офис, пообщаться с нашими специалистами, а также лично оценить процесс строительства на объектах.
-      </p>
-      <h3 class="heading heading--h3 heading--left">Почему мы?</h3>
-      <ul class="text text--left list list--paddingLeft-small">
-        <li>Все работы выполняются в строгом соответствии с действующими СНиП, что отличает нас от низкоквалифицированных бригад.</li>
-        <li>При проектировании дома из клееного бруса, предлагаем заказчику технические. решения, которые помогут избежать новых трат в будущем.
-              Например, лестницу на второй этаж лучше выбрать на стадии проектирования, чтобы заранее уменьшить или увеличить пространство для ее размещения.
-              Также, выбирать места для розеток и выключателей нужно после расстановки мебели и кухонного оборудования, так как кабельные каналы для проводки сверяться на этапе возведения бруса и дальнейший перенос практически невозможен. Еще пример: в зависимости от освещённости дома предложим выбрать стеклопакет с энергосбережением или с функцией отражения инфракрасного излучения — это даст возможность использовать кондиционирование воздуха на минимальном уровне или обойтись без него.</li>
-    {% endif %}
+        <p class="text text--sm">Компания «Дом Баня» — ваш надежный партнер в строительстве домов из клееного бруса. Ответственное отношение к поставленной задаче, соблюдение оговоренных сроков, качество — это основа нашей работы. Нами реализованы десятки проектов домов и бань.
+        Выбирая строительного подрядчика, важно учитывать уровень квалификации специалистов, их опыт работы с клееным брусом и наличие специального оборудования. Для неопытного человека это будет непростой задачей. Мы предлагаем каждому потенциальному заказчику посетить наш офис, пообщаться с нашими специалистами, а также лично оценить процесс строительства на объектах.
+        </p>
+        <h3 class="heading heading--h3 heading--left">Почему мы?</h3>
+        <ul class="text text--left list list--paddingLeft-small">
+          <li>Все работы выполняются в строгом соответствии с действующими СНиП, что отличает нас от низкоквалифицированных бригад.</li>
+          <li>При проектировании дома из клееного бруса, предлагаем заказчику технические. решения, которые помогут избежать новых трат в будущем.
+                Например, лестницу на второй этаж лучше выбрать на стадии проектирования, чтобы заранее уменьшить или увеличить пространство для ее размещения.
+                Также, выбирать места для розеток и выключателей нужно после расстановки мебели и кухонного оборудования, так как кабельные каналы для проводки сверяться на этапе возведения бруса и дальнейший перенос практически невозможен. Еще пример: в зависимости от освещённости дома предложим выбрать стеклопакет с энергосбережением или с функцией отражения инфракрасного излучения — это даст возможность использовать кондиционирование воздуха на минимальном уровне или обойтись без него.</li>
+      {% endif %}
 
-    {% if saunas_list or houses_list %}
-        <li>Консультируем заказчика при покупке отделочных материалов, поможем выбрать поставщика.</li>
-        <li>Поможем с оформлением документов для подключения газа.</li>
-        <li>Мы строим качественно, контролируем все этапы производства.</li>
-      </ul>
-      <p class="text text--sm">Выбрав нас в качестве подрядчика, вы гарантированно получите результат превыше ожиданий.</p>
-      <h3 class="heading heading--h3 heading--left">Чем клееный брус лучше обычного?</h3>
-      <p class="text text--sm">Обычный брус вне зависимости от сушки подвержен деформациям и подвижности. Клееный брус изготавливают путём склеивания сухой остроганной доски между собой, что увеличивает жесткость, минимизирует усадку, создаёт стабильную геометрию. Со временем клееный брус не растрескивается, а его поверхность очень ровная и не требует отделки и дополнительной обработки. На протяжении всего эксплуатационного периода уровень влажности бруса поддерживается на оптимальном уровне, не создаются благоприятные условия для размножения бактерий и грибка.</p>
+      {% if saunas_list or houses_list %}
+          <li>Консультируем заказчика при покупке отделочных материалов, поможем выбрать поставщика.</li>
+          <li>Поможем с оформлением документов для подключения газа.</li>
+          <li>Мы строим качественно, контролируем все этапы производства.</li>
+        </ul>
+        <p class="text text--sm">Выбрав нас в качестве подрядчика, вы гарантированно получите результат превыше ожиданий.</p>
+        <h3 class="heading heading--h3 heading--left">Чем клееный брус лучше обычного?</h3>
+        <p class="text text--sm">Обычный брус вне зависимости от сушки подвержен деформациям и подвижности. Клееный брус изготавливают путём склеивания сухой остроганной доски между собой, что увеличивает жесткость, минимизирует усадку, создаёт стабильную геометрию. Со временем клееный брус не растрескивается, а его поверхность очень ровная и не требует отделки и дополнительной обработки. На протяжении всего эксплуатационного периода уровень влажности бруса поддерживается на оптимальном уровне, не создаются благоприятные условия для размножения бактерий и грибка.</p>
 
-      <h2 class="heading heading--h2">Преимущества клееного бруса</h2>
-      <p class="text text--sm">Приведем самые основные, на наш взгляд.</p>
-      <ul class="text text--left list list--paddingLeft-small">
-        <li><h3 class="heading heading--h3 heading--left">Готовый красивый фасад</h3></li>
-        <p class="text text--sm">После завершения основных строительных работ не требуется отделка фасада или устранение незначительных дефектов в виде трещин</p>
-        <li><h3 class="heading heading--h3 heading--left">Теплые и гидроизолированные стены</h3></li>
-        <p class="text text--sm">После завершения основных строительных работ не требуется утепление и гидроизоляция стен.</p>
-        <li><h3 class="heading heading--h3 heading--left">Сниженные расходы и себестоимость</h3></li>
-        <p class="text text--sm">Из первых пунктов следует существенное снижение расходов на строительство и ощутимое снижение себестоимости дома.</p>
-      </ul>
-    {% endif %}
+        <h2 class="heading heading--h2">Преимущества клееного бруса</h2>
+        <p class="text text--sm">Приведем самые основные, на наш взгляд.</p>
+        <ul class="text text--left list list--paddingLeft-small">
+          <li><h3 class="heading heading--h3 heading--left">Готовый красивый фасад</h3></li>
+          <p class="text text--sm">После завершения основных строительных работ не требуется отделка фасада или устранение незначительных дефектов в виде трещин</p>
+          <li><h3 class="heading heading--h3 heading--left">Теплые и гидроизолированные стены</h3></li>
+          <p class="text text--sm">После завершения основных строительных работ не требуется утепление и гидроизоляция стен.</p>
+          <li><h3 class="heading heading--h3 heading--left">Сниженные расходы и себестоимость</h3></li>
+          <p class="text text--sm">Из первых пунктов следует существенное снижение расходов на строительство и ощутимое снижение себестоимости дома.</p>
+        </ul>
+      {% endif %}
+    </div>
   </article>
 </section>
