fix: list houses heading h3

--- a/templates/includes/list_houses.html
+++ b/templates/includes/list_houses.html
@@ -144,7 +144,7 @@
           <li>Мы строим качественно, контролируем все этапы производства.</li>
         </ul>
         <p class="text text--sm">Выбрав нас в качестве подрядчика, вы гарантированно получите результат превыше ожиданий.</p>
-        <h3 class="heading heading--h3 heading--left">Чем клееный брус лучше обычного?</h3>
+        <h3 class="heading heading--h3">Чем клееный брус лучше обычного?</h3>
         <p class="text text--sm">Обычный брус вне зависимости от сушки подвержен деформациям и подвижности. Клееный брус изготавливают путём склеивания сухой остроганной доски между собой, что увеличивает жесткость, минимизирует усадку, создаёт стабильную геометрию. Со временем клееный брус не растрескивается, а его поверхность очень ровная и не требует отделки и дополнительной обработки. На протяжении всего эксплуатационного периода уровень влажности бруса поддерживается на оптимальном уровне, не создаются благоприятные условия для размножения бактерий и грибка.</p>
 
         <h2 class="heading heading--h2">Преимущества клееного бруса</h2>
