fix: list houses font size

--- a/templates/includes/list_houses.html
+++ b/templates/includes/list_houses.html
@@ -131,7 +131,7 @@
         Выбирая строительного подрядчика, важно учитывать уровень квалификации специалистов, их опыт работы с клееным брусом и наличие специального оборудования. Для неопытного человека это будет непростой задачей. Мы предлагаем каждому потенциальному заказчику посетить наш офис, пообщаться с нашими специалистами, а также лично оценить процесс строительства на объектах.
         </p>
         <h2 class="heading heading--h2 heading--left">Почему мы?</h2>
-        <ul class="text text--left list list--paddingLeft-small">
+        <ul class="text text--sm text--left list list--paddingLeft-small">
           <li>Все работы выполняются в строгом соответствии с действующими СНиП, что отличает нас от низкоквалифицированных бригад.</li>
           <li>При проектировании дома из клееного бруса, предлагаем заказчику технические. решения, которые помогут избежать новых трат в будущем.
                 Например, лестницу на второй этаж лучше выбрать на стадии проектирования, чтобы заранее уменьшить или увеличить пространство для ее размещения.
@@ -149,7 +149,7 @@
 
         <h2 class="heading heading--h2">Преимущества клееного бруса</h2>
         <p class="text text--sm">Приведем самые основные, на наш взгляд.</p>
-        <ul class="text text--left list list--paddingLeft-small">
+        <ul class="text text--sm text--left list list--paddingLeft-small">
           <li><h3 class="heading heading--h3 heading--left">Готовый красивый фасад</h3></li>
           <p class="text text--sm">После завершения основных строительных работ не требуется отделка фасада или устранение незначительных дефектов в виде трещин</p>
           <li><h3 class="heading heading--h3 heading--left">Теплые и гидроизолированные стены</h3></li>
