fix: list houses text--sm

--- a/templates/includes/list_houses.html
+++ b/templates/includes/list_houses.html
@@ -118,7 +118,7 @@
         <p class="text text--sm">Компания «Дом Баня» специализируется на строительстве бань из клееного бруса. Ответственное отношение к поставленной задаче, соблюдение оговоренных сроков, качество — это основа нашей работы. Нами реализованы десятки проектов бань и домов-бань.
         Выбирая строительного подрядчика, важно учитывать уровень квалификации специалистов, их опыт работы с клееным брусом и наличие специального оборудования. Для неопытного человека это будет непростой задачей. Мы предлагаем каждому потенциальному заказчику посетить наш офис, пообщаться с нашими специалистами, а также лично оценить процесс строительства на объектах.</p>
         <h3 class="heading heading--h3 heading--left">Почему мы?</h3>
-        <ul class="text text--left list list--paddingLeft-small">
+        <ul class="text text--sm text--left list list--paddingLeft-small">
           <li>Все работы выполняются в строгом соответствии с действующими СНиП, что отличает нас от низкоквалифицированных бригад.</li>
           <li>При проектировании бани из клееного бруса мы предлагаем заказчику технические решения, которые помогут избежать новых трат в будущем. Например, лестницу на второй этаж лучше выбрать на стадии проектирования, чтобы заранее уменьшить или увеличить пространство для ее размещения. Также, выбирать места для розеток и выключателей нужно после расстановки мебели, так как кабельные каналы для проводки сверяться на этапе возведения бруса и дальнейший перенос практически невозможен.</li>
           <li>Консультируем заказчика при покупке отделочных материалов, поможем выбрать поставщика.</li>
