--- a/templates/structure-detail.html
+++ b/templates/structure-detail.html
@@ -112,7 +112,7 @@
 
       <a class="gallery__link" href="{% static ''|add:img_link %}">
 
-        {% with 'https://'|add:request.get_host|add:STATIC_URL|add:img_link as path %}
+        {% with request.scheme|add:'://'|add:request.get_host|add:STATIC_URL|add:img_link as path %}
           {% thumbnail path "357x240" crop="center" upscale=True as im %}
             <img loading="lazy" alt="Изображение {{structure.title}} {{structure.square}}м² {{counter}}" src="{{ im.url }}" class="gallery__img" data-img-index="{{counter}}" tabindex="0" />
           {% endthumbnail %}
