fixex and headers

--- a/templates/structure-index.html
+++ b/templates/structure-index.html
@@ -29,7 +29,7 @@
   <article class="grid__article">
     <div class="grid__element grid__element--wide">
       <h1 class="heading heading--h2 heading--bold">
-        {{ category_title }}
+        {{ category_header }}
       </h1>
     </div>
   </article>
