--- a/templates/structure-index.html
+++ b/templates/structure-index.html
@@ -29,18 +29,22 @@
 <section class="content-slider content-slider--top">
   <div class="content-slider__wrapper content-slider__wrapper--top">
     <article class="content-slider__item promo promo--half content-slider__item--houses">
-      <div class="promo__wrapper" style="margin-bottom: 0; text-align: center; padding: 4rem 1rem;">
+      <div class="promo__wrapper">
+
         <h1 class="heading heading--h1 heading--white"
-            style="margin-bottom: 1rem; max-width: 90%; margin-left: auto; margin-right: auto;">
+            style="max-width: 98%; display: inline-block; margin-left: auto; margin-right: auto;">
           {{ category_header|default:"Дома из клееного бруса" }}
         </h1>
+
         {% if saunas_list or houses_list %}
-          <a href="{% url 'houses:houses_categories' %}"
-            class="button button--white button--small button--bold"
-            style="font-size: 1.1rem;">
-            ← Назад к категориям
-          </a>
+          <div class="promo__buttons">
+            <a href="{% url 'houses:houses_categories' %}"
+              class="button button--white button--small button--bold">
+              ← Назад к категориям
+            </a>
+          </div>
         {% endif %}
+
       </div>
     </article>
   </div>
